# Kinect-Based-Sound-Localization

./: README.md
KBSL/: CMakeLists.txt  plane_fitting_viewer.rviz
KBSL/SoundAPI/: API  AudioAPI.cpp  readme.txt  run.sh
KBSL/launch/: kinect.launch
KBSL/msg_gen/cpp/include/KBSL/: PlaneParametersMsg.h
KBSL/msg_gen/lisp/: KBSL-msg.asd  PlaneParametersMsg.lisp  _package.lisp  _package_PlaneParametersMsg.lisp
KBSL/src/: AudioAPI.cpp  AudioAPI.h  KBSL.cpp  KBSL_Bag.cpp  assignment3.cpp  eigen_examples.cpp
KBSL/src/KBSL/msg/: _PlaneParametersMsg.py
KBSL/src/KBSL/srv/: _FindInliersSrv.py  _FitBestPlaneSrv.py  _FitMinimalPlaneSrv.py  _TransformPointSrv.py
KBSL/srv_gen/cpp/include/KBSL/: FindInliersSrv.h  FitBestPlaneSrv.h  FitMinimalPlaneSrv.h  TransformPointSrv.h
KBSL/srv_gen/lisp/: FindInliersSrv.lisp  FitBestPlaneSrv.lisp  FitMinimalPlaneSrv.lisp  KBSL-srv.asd  TransformPointSrv.lisp  _package.lisp  _package_FindInliersSrv.lisp  _package_FitBestPlaneSrv.lisp  _package_FitMinimalPlaneSrv.lisp  _package_TransformPointSrv.lisp
